--- a/django_academy/envs/.env
+++ b/django_academy/envs/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=i_like_pineapple
-ALLOWED_HOSTS=127.0.0.1 localhost
+ALLOWED_HOSTS="127.0.0.1 localhost"
 DEBUG=TRUE
 
 DB_NAME=01.django_academy
