--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,7 +9,7 @@ services:
     container_name: academy_app
     command: gunicorn django_academy.wsgi:application --bind 0.0.0.0:8000
     volumes:
-      - ./static:/tmp/django_academy/static
+      - ./staticfiles:/tmp/django_academy/static
     ports:
       - 8000:8000
     env_file:
@@ -37,7 +37,7 @@ services:
       - 81:80
       - 443:443
     volumes:
-      - ./static:/home/app/web/static
+      - ./staticfiles:/home/app/web/static
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./nginx/logs:/var/log/nginx
       - ./certbot/www:/var/www/certbot/:ro
