--- a/nginx/conf.d/web.conf
+++ b/nginx/conf.d/web.conf
@@ -1,27 +1,30 @@
-
-upstream django_academy {
-    server app:8000;
-    }
+upstream django-academy {
+    server web:8000;
+}
 
 server {
-
     listen 80;
 
-    server_name django-academy.tk
+    server_name django-academy.tk www.django-academy.tk;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
     location / {
-        proxy_pass http://django_academy;
+        proxy_pass http://django-academy;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
 
     location /static/ {
-        alias /home/app/web/static/;
+            alias /home/app/web/static/;
     }
 
+
+
+    # location / {
+    #     return 301 https://petstagram-demo-demo.tk$request_uri;
+    # }
 }
