--- a/nginx/conf.d/web.conf
+++ b/nginx/conf.d/web.conf
@@ -1,5 +1,5 @@
-upstream django-academy {
-    server web:8000;
+upstream django_academy {
+    server app:8000;
 }
 
 server {
@@ -12,7 +12,7 @@ server {
     }
 
     location / {
-        proxy_pass http://django-academy;
+        proxy_pass http://django_academy;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
