--- a/nginx/conf.d/web.conf
+++ b/nginx/conf.d/web.conf
@@ -19,7 +19,7 @@ server {
     }
 
     location /static/ {
-            alias /home/app/web/static/;
+            alias /home/app/web/staticfiles/;
     }
 
 
